--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "dehliz",
-    "slug": "dehliz",
+    "name": "paff",
+    "slug": "paff",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -16,14 +16,14 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.endertopaloglu.dehliz"
+      "bundleIdentifier": "com.endertopaloglu.paff"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.endertopaloglu.dehliz"
+      "package": "com.endertopaloglu.paff"
     },
     "web": {
       "favicon": "./assets/favicon.png"
