--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "paths": {
       "@components/*":["src/components/*"],
       "@styles/*":["src/styles/*"],
+      "@screens/*":["src/screens/*"],
       "@icons/*":["assets/icons/*"],
     }
   }
