--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "@styles/*":["src/styles/*"],
       "@screens/*":["src/screens/*"],
       "@icons/*":["assets/icons/*"],
+      "@assets/*":["assets/*"],
     }
   }
 }
